--- a/.github/workflows/kral.yml
+++ b/.github/workflows/kral.yml
@@ -1,9 +1,6 @@
 name: CI
 
 on: workflow_dispatch
-name: CI
-
-on: workflow_dispatch
 
 jobs:
   build:
@@ -12,35 +9,25 @@ jobs:
     timeout-minutes: 9999
 
     steps:
-    - name: Ngrok ve NSSM'yi indiriyor!
-      run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
-        Invoke-WebRequest https://raw.githubusercontent.com/Emre37destan/Windows2019RDP-US/main/Files/nssm.exe -OutFile nssm.exe
-    - name: NSSM & Ngrok'u Windows Dizinine kopyalanıyor!
-      run: | 
-        copy nssm.exe C:\Windows\System32
-        copy ngrok.exe C:\Windows\System32
-    - name: NGROK hesabınızı bağlayın
-      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+    - name: Ngrok İndiriliyor!
+      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+    - name: Ngrok Arşivden Çıkarılıyor!
+      run: Expand-Archive ngrok.zip
+    - name: Token İşleniyor!
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Önemli Dosyaları İndirin.
-      run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/Emre37destan/Windows2019RDP-US/main/Files/NGROK-US.bat -OutFile NGROK-US.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/Emre37destan/Windows2019RDP-US/main/Files/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/Emre37destan/Windows2019RDP-US/main/Files/loop.bat -OutFile loop.bat
-    - name: NGROK için YML dosyası oluşturun.
-      run: start NGROK-US.bat
-    - name: RDP Erişimini etkinleştirin.
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - name: Tünel Oluşturun
-      run: sc start ngrok
-    - name: RDP 2core-7GB Ram'inize bağlanın.
+    - name: TS Etkinleştiriliyor!
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - name: RDP için Güvenlik Duvarı Aktif!
+      run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+    - name: Regdit'ten RDP Mülküne İzin Veriliyor!
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - name: Kullanıcı Atanıyor!
+      run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "Windows2019" -Force)
+    - name: Tünel Oluşturuluyor!
+      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
+    - name: Zaman Aşımı Komut Dosyasını İndiriliyor!
       run: cmd /c NGROK-CHECK.bat
-    - name: Hepsi tamam! Şimdi Tab'ı kapatabilirsiniz! Maksimum sanal makine süresi: 6 saat.
-      run: cmd /c loop.bat
-      
-    
+    - name: Max 6 Saat Açık
+      run: cmd /c loop.bat 
